objects/Campsite_Reservation__c.object
<CustomObject>
    <fields>
        <fullName>Campsite__c</fullName>
        <label>Campsite</label>
        <referenceTo>Campsite__c</referenceTo>
        <relationshipLabel>Campsite Reservations</relationshipLabel>
        <relationshipName>Campsite_Reservations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campsite_Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>